# slangmake

./: .clang-format  .gitignore  CHANGELOG  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml  claude.yml  format.yml  issue-deduplication.yml  pr-review-comprehensive.yml  release.yml  test-failure-analysis.yml
cmake/: ConfigureCLI11.cmake  ConfigureDoctest.cmake  ConfigureDxc.cmake  ConfigureLz4.cmake  ConfigureSlang.cmake  ConfigureZstd.cmake  DetermineTargetArchitecture.cmake  FetchPackage.cmake  slangmake_version.h.in
docs/: README.md  cursor.md  integration.md  permutations.md  reflection.md
include/: slangmake.h  slangmake.hpp
src/: main.cpp  slangmake_batch.cpp  slangmake_blob.cpp  slangmake_c.cpp  slangmake_c_compiler.cpp  slangmake_c_internal.h  slangmake_compiler.cpp  slangmake_internal.h  slangmake_internal_rt.h  slangmake_reflection.cpp  slangmake_reflection_view.cpp  slangmake_runtime_internal.h  slangmake_util.cpp  slangmake_util_compiler.cpp
tests/: CMakeLists.txt  test_batch.cpp  test_blob.cpp  test_capi.cpp  test_cli.cpp  test_compile.cpp  test_compression.cpp  test_cursor.cpp  test_enums.cpp  test_include.cpp  test_incremental.cpp  test_parallel.cpp  test_permutation.cpp  test_reflection.cpp  test_spirv_match.cpp  test_type_specialization.cpp
tests/shaders/: compute.slang  existential_global.slang  generic_material.slang  helpers.hlsli  permuted.slang  resource_array.slang  with_double_include.slang  with_external_include.slang  with_include.slang  with_nested_include.slang  with_resources.slang
